Trying to fix double tap zoom on iOS
Double tapping on a DOM element zooms in to that element. Tried to fix with `viewport` tag, but that doesn't seem to work anymore. Now trying with CSS `touch-action`

--- a/weather/pwa/css/style.css
+++ b/weather/pwa/css/style.css
@@ -15,3 +15,7 @@ body {
     margin: 0;
     padding: 0;
 }
+
+body {
+    touch-action: pan-y, pan-x;
+}
